# lua-sound-plugin

./: Cargo.toml  README.md  TODO.md
.github/workflows/: release.yml
src/: editor.rs  engine.rs  lib.rs  presets.rs
src/assets/presets/: bitcrusher.lua  chorus.lua  default.lua  delay.lua  distortion.lua  gain.lua  tremolo.lua
xtask/: Cargo.toml
xtask/src/: main.rs
