[package]
name = "lua-sound"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rfd = { version = "0.14", features = ["async-std"] }
mlua = { version = "0.10", features = ["lua54", "vendored", "send"] }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug" }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug" }
dirs = "5"

[workspace]
members = ["xtask"]